--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Expires" content="-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
     
-    <script src='https://cdn.socket.io/socket.io-1.4.0.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js'></script>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -20,7 +20,7 @@
             width: 300px;
             height: 15px;
             border-radius: 10px;
-            background: #363636;
+            background: rgb(252, 37, 73);
             opacity: 0.75;
             -webkit-transition: 0.2s;
             transition: opacity 0.2s;
@@ -31,13 +31,19 @@
             width: 25px;
             height: 25px;
             border-radius: 50%; 
-            background: #f83056;
+            background:white;
             cursor: pointer;
         }
         .head-color{
-            background: #f83056;
+            background: rgb(252, 37, 73);
         }
-        html, body { overflow-x: hidden; }
+        html, body {
+            overflow-x: hidden;
+            background-color: rgb(26, 26, 26);
+        }
+        .icon-cog {
+        color: white;
+        }
     </style>
 </head>
 
@@ -66,24 +72,24 @@
                     <br>
                     <div class="row" style="max-width:400px;">
                         <div class="col">
-                            <i class="fas fa-step-backward fa-3x" id="previous" onclick="prev()"></i>
+                            <i class="icon-cog fas fa-step-backward fa-3x" id="previous" onclick="prev()"></i>
                         </div>
                         <div class="col">
-                            <i class="fas fa-pause-circle fa-3x" id="PlayPause" onclick="playPause()"></i>
+                            <i class="icon-cog fas fa-pause-circle fa-3x" id="PlayPause" onclick="playPause()"></i>
                         </div>
                         <div class="col">
-                            <i class="fas fa-step-forward fa-3x" id="next" onclick="next()"></i>
+                            <i class="icon-cog fas fa-step-forward fa-3x" id="next" onclick="next()"></i>
                         </div>
                     </div>
                     <br>
-                    <div class="col marquee" id="nowPlaying"></div>
+                    <div class="icon-cog col marquee" id="nowPlaying"></div>
                     <hr>
                     <div class="row" style="max-width: 200px;">
                         <div class="col">
-                                <i class="fas fa-random fa-2x" id="shuffle" onclick="shuffle()"></i>
+                                <i class="icon-cog fas fa-random fa-2x" id="shuffle" onclick="shuffle()"></i>
                         </div>
                         <div class="col">
-                            <i class="fas fa-volume-off fa-2x" id='muted' onclick="mute()"></i>
+                            <i class="icon-cog fas fa-volume-off fa-2x" id='muted' onclick="mute()"></i>
                         </div>
                     </div>
                     <hr>
@@ -92,7 +98,7 @@
                     </div>
                     <hr>
                     <div align="left" style="max-width: 300px;">
-                        <div class="fas fa-list-alt fa-2x">&nbsp;Playlists</div>
+                        <div class="icon-cog fas fa-list-alt fa-2x">&nbsp;Playlists</div>
                         <br>
                         <ul id="playlists">
                             
