--- a/templates/index.html
+++ b/templates/index.html
@@ -104,6 +104,13 @@
                             
                         </ul>
                     </div>
+                    <div align="left" style="max-width: 300px;">
+                        <div class="icon-cog fas fa-list-alt fa-2x">&nbsp;Albums</div>
+                        <br>
+                        <ul id="albums">
+                            
+                        </ul>
+                    </div>
             </div>
         </div>
     </div>
